testing fix for background image on iOS

--- a/ipnd_notes_style.css
+++ b/ipnd_notes_style.css
@@ -17,12 +17,20 @@ html {
 	background-image: url("images/background.png");
   	background-attachment: fixed;
   	background-size: cover;
-
-  	/* default margin */
+  	background-repeat: no-repeat;
+/*  	background-position: center center;*/  	
+	
+	/* default margin */
   	margin: 50px;
 
   	/* custom font for titles and headers */
   	font-family: geosansLight;
+
+    @media (max-width: @iphone-screen) {
+        background-attachment: scroll;
+    }
+
+
 }
 
 .course_title_h1 {
